--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
 </header>
 <section class="mer">
-    <video loop="loop" autoplay="autoplay" muted>
+    <video loop="loop" autoplay="autoplay" muted playsinLine>
 <source src="./asset/river.mp4" type="video/mp4" />
     </video>
 </section>
