--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <br><br><br><br>
         <div class="liste">
             <ul>
-                <li>J'ai adore faire l'Apple foundation program.</li>
+                <li>J'ai adoree faire l'Apple foundation program.</li>
                 <p>&#9999;</p>
                 <li>Les metiers du numerique m'attire depuis toujours.</li>
                 <p>&#9999;</p>
@@ -141,7 +141,7 @@
     </div>
     <div class="wrapper">
         <div class="appear"id="l2">
-            <p>je serai ravi d'y repondre.</p>
+            <p>je serais ravis d'y repondre.</p>
         </div>
     </div>
     <div class="img2-wrapper">
