--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>    
     </div>
     <div class="wrapper">
-        <div class="appear" id="h2-1">
+        <div class="appear">
             <h2>Conceptrice developpeuse d'application</h2>
         </div>
     </div>
