--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     </div>
     <div class="wrapper">
         <div class="appear" id="h1-wrapper">
-            <h3>Alexia Trouve</h3>
+            <h3>Alexia Trouvé</h3>
         </div>    
     </div>
     <div class="wrapper">
         <div class="appear">
-            <h2>Conceptrice developpeuse d'application</h2>
+            <h2>Conceptrice développeuse d'application</h2>
         </div>
     </div>
 </header>
@@ -42,15 +42,15 @@
         <br><br><br><br>
         <div class="liste">
             <ul>
-                <li>J'ai adoree faire l'Apple foundation program.</li>
+                <li>L'Apple foundation program m'a beaucoup plu.</li>
                 <p>&#9999;</p>
-                <li>Les metiers du numerique m'attire depuis toujours.</li>
+                <li>Les métiers du numérique m'attire depuis toujours.</li>
                 <p>&#9999;</p>
                 <li>Ce domaine est porteur.</li>
                 <p>&#9999;</p>
-                <li>Il y a un large choix de metiers.</li>
+                <li>Il y a un large choix de métiers.</li>
                 <p>&#9999;</p>
-                <li>Je souhaite profiter de l'opportunite du parcours 100% femmes.</li>
+                <li>Je souhaite profiter de l'opportunité du parcours 100% femmes.</li>
             </ul>
             <br>
         <div class="social-media">
@@ -141,7 +141,7 @@
     </div>
     <div class="wrapper">
         <div class="appear"id="l2">
-            <p>je serais ravis d'y repondre.</p>
+            <p>je serais ravis d'y répondre.</p>
         </div>
     </div>
     <div class="img2-wrapper">
