--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <header>
     <div class="links">
-        <a href="#portfolio">portfolio</a>
+        <a href="#portfolio">Portfolio</a>
         <a href="mailto:alexiatrouve@outlook.fr">Contact</a>
     </div>
     <div class="wrapper">
