--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>    
         </div>
         <br><br><br><br>
-        <div class="liste">
+        <div class="list">
             <ul>
                 <li>L'Apple foundation program m'a beaucoup plu.</li>
                
