--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
         <br><br><br><br>
         <div class="list">
             <ul>
-                <li>- L'Apple foundation program a été une formation révélatrice.</li>
+                <li>- L'Apple Foundation Program de Simplon a été une formation révélatrice</li>
 
-                <li>- J'adhère à la pédagogie active de Simplon</li>
+                <li>- J'adhère à la pédagogie active</li>
                
                 <li>- Les métiers du numérique m'ont toujours attirée</li>
                 
